--- a/index.html
+++ b/index.html
@@ -24,52 +24,64 @@
             <div class="colonne fissate">
 
                 <div class="col">
-                    <img src="img/male1.png" alt="Immagine colonna 1" />
-                    <h3>MARCO BIANCHI</h3>
-                    <p>Designer</p>
-                    <p>marcobianchi@team.com</p>
+                    <div classe="float"> <img src="img/male1.png" alt="Immagine colonna 1" />
+                        <h3>MARCO BIANCHI</h3>
+                        <p>Designer</p>
+                        <p>marcobianchi@team.com</p>
+                    </div>
+
                 </div>
 
                 <div class="col">
-                    <img src="img/female1.png" alt="Immagine colonna 2" />
-                    <h3>Laura Rossi</h3>
-                    <p>Front-end Developer</p>
-                    <p>laurarossi@team.com</p>
+                    <div class="float"><img src="img/female1.png" alt="Immagine colonna 2" />
+                        <h3>Laura Rossi</h3>
+                        <p>Front-end Developer</p>
+                        <p>laurarossi@team.com</p>
+                    </div>
+
                 </div>
 
                 <div class="col">
-                    <img src="img/male2.png" alt="Immagine colonna 3" />
-                    <h3>Giorgio Verdi</h3>
-                    <p>Back-end Developer</p>
-                    <p>giorgioverdi@team.com</p>
+                    <div class="float"> <img src="img/male2.png" alt="Immagine colonna 3" />
+                        <h3>Giorgio Verdi</h3>
+                        <p>Back-end Developer</p>
+                        <p>giorgioverdi@team.com</p>
+                    </div>
+
                 </div>
 
             </div>
 
-            <section>
-                <div class="col">
-                    <img src="img/female2.png" alt="Immagine colonna 4" />
+
+            <div class="col">
+                <div class="float"><img src="img/female2.png" alt="Immagine colonna 4" />
                     <h3>MARTA IPSUM</h3>
                     <p>Seo Specialist</p>
                     <p>martaipsum@team.com</p>
                 </div>
 
-                <div class="col">
-                    <img src="img/male3.png" alt="Immagine colonna 5" />
+            </div>
+
+            <div class="col">
+                <div class="float"> <img src="img/male3.png" alt="Immagine colonna 5" />
                     <h3>ROBERTO LOREM</h3>
                     <p>Projet Manager</p>
                     <p>robertolorem@team.com</p>
                 </div>
 
-                <div class="col">
-                    <img src="img/female3.png" alt="Immagine colonna 6" />
+            </div>
+
+            <div class="col">
+                <div class="float"><img src="img/female3.png" alt="Immagine colonna 6" />
                     <h3>DANIELA AMET</h3>
                     <p>Analist</p>
                     <p>danielamet@team.com</p>
                 </div>
 
-                </div>
-            </section>
+            </div>
+
+            </div>
+            
 
         </main>
     </body>
